--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-logger": "^3.2.0",
     "lodash.once": "^4.1.1",
     "parse-duration": "^0.1.1",
+    "require-all": "^3.0.0",
     "server-destroy": "^1.0.1",
     "systemic": "^3.0.0"
   },
